# TuyaOpen

./: .clang-format-ignore  .gitignore  .gitmodules  README.md  README_zh.md  export.bat  export.ps1  export.sh  tos.py
examples/protocols/mqtt_client/: CMakeLists.txt
examples/protocols/mqtt_client/src/: examples_mqtt_client.c
src/peripherals/camera/: CMakeLists.txt  Kconfig
src/peripherals/camera/tdd_camera/include/: tdd_camera_dvp.h  tdd_camera_dvp_gc2145.h  tdd_camera_dvp_i2c.h  tdd_camera_gc2145.h  tdd_camera_ov2640.h
src/peripherals/camera/tdd_camera/src/dvp/: dvp_gc2145_init_seq.h  tdd_camera_dvp.c  tdd_camera_dvp_gc2145.c  tdd_camera_dvp_i2c.c  tdd_camera_dvp_ov2640.c  tdd_camera_gc2145_init_seq.h  tdd_camera_ov2640_init_seq.h
src/peripherals/camera/tdl_camera/include/: tdl_camera_driver.h  tdl_camera_manage.h
src/peripherals/camera/tdl_camera/src/: tdl_camera_manage.c
src/peripherals/ir/: CMakeLists.txt  Kconfig
src/peripherals/ir/tdd_ir_driver/include/: tdd_ir_driver.h
src/peripherals/ir/tdd_ir_driver/src/: tdd_ir_driver_T1.c  tdd_ir_driver_T2.c  tdd_ir_driver_T5.c  tdd_ir_driver_bk7231n.c
src/peripherals/ir/tdl_ir_device/: README.md
src/peripherals/ir/tdl_ir_device/include/: tdl_ir_dev_manage.h  tdl_ir_driver.h  tdl_nec_protocol.h
src/peripherals/ir/tdl_ir_device/src/: tdl_ir_dev_manage.c  tdl_nec_protocol.c
src/peripherals/transport/: CMakeLists.txt
src/peripherals/transport/tdd_transport/include/: tdd_transport_uart.h
src/peripherals/transport/tdd_transport/src/: tdd_transport_uart.c
src/peripherals/transport/tdl_transport/include/: tdl_transport_driver.h  tdl_transport_manage.h
src/peripherals/transport/tdl_transport/src/: tdl_transport_manage.c
src/tuya_p2p/: CMakeLists.txt  Kconfig
src/tuya_p2p/base_ice/include/: tuya_common_types.h  tuya_media_service_rtc.h
src/tuya_p2p/base_ice/src/: ikcp.c  ikcp.h  pj_ice.c  pj_ice.h  pj_sdp.c  pj_sdp.h  pj_sync_condition.c  pj_sync_condition.h  queue.h  tuya_error.c  tuya_error.h  tuya_log.h  tuya_media_service_rtc.c  tuya_misc.c  tuya_misc.h  tuya_rtp.h  tuya_sdp.c  tuya_sdp.h
src/tuya_p2p/lib_rtp/: CMakeLists.txt
src/tuya_p2p/lib_rtp/include/: rtcp-header.h  rtp-demuxer.h  rtp-ext.h  rtp-header-extension.h  rtp-header.h  rtp-internal.h  rtp-member-list.h  rtp-member.h  rtp-packet.h  rtp-param.h  rtp-payload.h  rtp-profile.h  rtp-queue.h  rtp-util.h  rtp.h
src/tuya_p2p/lib_rtp/payload/: rtp-av1-pack.c  rtp-av1-unpack.c  rtp-h264-bitstream.c  rtp-h264-pack.c  rtp-h264-unpack.c  rtp-h265-pack.c  rtp-h265-unpack.c  rtp-h266-pack.c  rtp-h266-unpack.c  rtp-mp4a-latm-pack.c  rtp-mp4a-latm-unpack.c  rtp-mp4v-es-pack.c  rtp-mp4v-es-unpack.c  rtp-mpeg1or2es-pack.c  rtp-mpeg1or2es-unpack.c  rtp-mpeg4-generic-pack.c  rtp-mpeg4-generic-unpack.c  rtp-pack.c  rtp-payload-helper.c  rtp-payload-helper.h  rtp-payload-internal.h  rtp-payload.c  rtp-ps-unpack.c  rtp-ts-pack.c  rtp-ts-unpack.c  rtp-unpack.c  rtp-vp8-pack.c  rtp-vp8-unpack.c  rtp-vp9-pack.c  rtp-vp9-unpack.c
src/tuya_p2p/lib_rtp/rtpext/: rtp-ext-abs-send-time.c  rtp-ext-absolute-capture-time.c  rtp-ext-color-space.c  rtp-ext-csrc-audio-level.c  rtp-ext-frame-marking.c  rtp-ext-inband-cn.c  rtp-ext-playout-delay.c  rtp-ext-sdes.c  rtp-ext-ssrc-audio-level.c  rtp-ext-toffset.c  rtp-ext-transport-wide-cc.c  rtp-ext-video-content-type.c  rtp-ext-video-frame-tracking-id.c  rtp-ext-video-layers-allocation.c  rtp-ext-video-orientation.c  rtp-ext-video-timing.c  rtp-ext.c
src/tuya_p2p/lib_rtp/src/: rtcp-app.c  rtcp-bye.c  rtcp-interval.c  rtcp-psfb.c  rtcp-rr.c  rtcp-rtpfb.c  rtcp-sdec.c  rtcp-sr.c  rtcp-xr.c  rtcp.c  rtp-demuxer.c  rtp-member-list.c  rtp-member.c  rtp-packet.c  rtp-profile.c  rtp-queue.c  rtp-ssrc.c  rtp-time.c  rtp.c
src/tuya_p2p/pjproject/: CMakeLists.txt
src/tuya_p2p/pjproject/pjlib-util/include/: pjlib-util.h
src/tuya_p2p/pjproject/pjlib-util/include/pjlib-util/: base64.h  cli.h  cli_console.h  cli_imp.h  cli_telnet.h  config.h  crc32.h  dns.h  dns_server.h  errno.h  getopt.h  hmac_md5.h  hmac_sha1.h  http_client.h  json.h  md5.h  pcap.h  resolver.h  scanner.h  scanner_cis_bitwise.h  scanner_cis_uint.h  sha1.h  srv_resolver.h  string.h  stun_simple.h  xml.h
src/tuya_p2p/pjproject/pjlib-util/src/pjlib-util/: base64.c  cli.c  cli_console.c  cli_telnet.c  crc32.c  dns.c  dns_dump.c  dns_server.c  errno.c  getopt.c  hmac_md5.c  hmac_sha1.c  http_client.c  json.c  md5.c  pcap.c  resolver.c  scanner.c  scanner_cis_bitwise.c  scanner_cis_uint.c  sha1.c  srv_resolver.c  string.c  stun_simple.c  stun_simple_client.c  xml.c
src/tuya_p2p/pjproject/pjlib/include/pj/: activesock.h  addr_resolv.h  array.h  assert.h  config.h  config_site.h  config_site_sample.h  ctype.h  doxygen.h  errno.h  except.h  fifobuf.h  file_access.h  file_io.h  guid.h  hash.h  ioqueue.h  ip_helper.h  limits.h  list.h  list_i.h  lock.h  log.h  math.h  os.h  pool.h  pool_alt.h  pool_buf.h  pool_i.h  rand.h  rbtree.h  sock.h  sock_qos.h  sock_select.h  ssl_sock.h  string.h  string_i.h  timer.h  types.h  unicode.h
src/tuya_p2p/pjproject/pjlib/src/pj/: activesock.c  addr_resolv_sock.c  array.c  config.c  errno.c  except.c  fifobuf.c  file_access_unistd.c  file_io_ansi.c  guid.c  guid_simple.c  hash.c  ioqueue_common_abs.c  ioqueue_common_abs.h  ioqueue_epoll.c  ioqueue_select.c  list.c  (+35 more)
src/tuya_p2p/pjproject/pjmedia/include/: pjmedia.h
src/tuya_p2p/pjproject/pjnath/include/: pjnath.h
src/tuya_p2p/svc_ipc_core/: CMakeLists.txt
src/tuya_p2p/svc_ipc_core/include/: tuya_ipc_skill.h  tuya_p2p_sdk.h
src/tuya_p2p/svc_ipc_core/src/: tuya_ipc_skill.c  tuya_p2p_sdk.c
src/tuya_p2p/svc_streaming_p2p/include/: tuya_ipc_media.h  tuya_ipc_media_adapter.h  tuya_ipc_media_stream.h  tuya_ipc_media_stream_common.h  tuya_ipc_media_stream_event.h  tuya_ipc_p2p.h  tuya_ipc_p2p_common.h  tuya_ipc_p2p_error.h  tuya_ipc_p2p_inner.h  tuya_p2p_api.h
src/tuya_p2p/svc_streaming_p2p/src/: tuya_ipc_p2p.c  tuya_ipc_p2p_common.c
tools/porting/template/: CMakeLists.txt  Kconfig  build_example.py  main.c  platform_config.cmake  platform_prepare.py  toolchain_file.cmake
(+547 files in other folders)
